--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<app-toolbar></app-toolbar>
 
-<div class="chip">
-    Jane Doe
-  </div>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
