--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -7,11 +7,11 @@
 
       <ul class="right hide-on-med-and-down">
 
-        <li> <a (click)='presentAuthDialog()'>LOGIN</a></li>
-        <li> <a (click)="presentAuthDialog('register')">REGISTER</a></li>
+        <li *ngIf="!tokenAuthService.userSignedIn()"> <a (click)='presentAuthDialog()'>LOGIN</a></li>
+        <li *ngIf="!tokenAuthService.userSignedIn()"> <a (click)="presentAuthDialog('register')">REGISTER</a></li>
 
-        <li> <a [routerLink]="['/profile']" >PROFILE</a></li>
-        <li> <a >LOGOUT</a></li>
+        <li *ngIf="tokenAuthService.userSignedIn()"> <a [routerLink]="['/profile']" >PROFILE</a></li>
+        <li *ngIf="tokenAuthService.userSignedIn()"> <a >LOGOUT</a></li>
 
       </ul>
 
